# LinuxLabX

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  Version.h.in  app  usage.json
.github/workflows/: cmake-multi-platform.yml  release.yml
assets/: README.md
cmake/: windows-icon.rc.in
include/: command.h  command_registry.h  errors.h  executor.h  filesystem.h  logging.h  parser.h  suggestions.h  ui.h
packaging/: README.md
packaging/linux/: build-appimage.sh
packaging/macos/: create-dmg.sh
packaging/windows/: installer.nsi  package.ps1
src/: command_registry.cpp  errors.cpp  executor.cpp  filesystem.cpp  logging.cpp  main.cpp  parser.cpp  suggestions.cpp  ui.cpp
website/: index.html  styles.css
